--- a/src/templates/ui_test.html
+++ b/src/templates/ui_test.html
@@ -479,7 +479,7 @@
 
 <script>
     let deleteIndex = -1;
-    base_url = 'http://localhost:5002/api/v1/rag';
+    base_url = '';
 
     function addKnowledge() {
         const subject = document.getElementById('subjectSelect').value;
