--- a/src/templates/ui_test.html
+++ b/src/templates/ui_test.html
@@ -479,7 +479,7 @@
 
 <script>
     let deleteIndex = -1;
-    base_url = '';
+    base_url = 'https://api-dev.ebk.vn/rag-service/api/v1/rag';
 
     function addKnowledge() {
         const subject = document.getElementById('subjectSelect').value;
